# yappy

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  config.yaml  demo.tape  main.py  pyproject.toml  requirements.txt
.claude/plans/: 2026-03-06-dashboard-ux-validation.md
.claude/skills/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/plans/: 2026-03-04-tui-dashboard-design.md  2026-03-04-tui-dashboard-implementation.md  2026-03-05-comprehensive-readme-design.md  2026-03-05-developer-docs-design.md  2026-03-05-roadmap.md
homebrew/: yappy.rb
src/: cli.py
src/ai/: banned_phrases.py  comment_generator.py  gemini_client.py  models.py
src/core/: callbacks.py  config.py  orchestrator.py  paths.py  rate_limiter.py  scheduler.py  updates.py
src/executor/: comment_poster.py  human_typer.py  models.py
src/scraper/: browser_factory.py  linkedin_scraper.py  models.py
src/storage/: activity_log.py  models.py
src/tui/: app.py  events.py
src/tui/screens/: activity_log.py  config_editor.py  dashboard.py  onboarding.py
src/tui/widgets/: comment_review.py  header_bar.py  live_feed.py  stats_panel.py  strategy_panel.py
src/tui/workers/: bot_worker.py
test_dir/: Local State
test_dir/Default/: DIPS  Preferences  Secure Preferences  Visited Links  Web Data
test_dir/Default/Cache/Cache_Data/index-dir/: the-real-index
test_dir/Default/Code Cache/js/index-dir/: the-real-index
test_dir/Default/Code Cache/wasm/index-dir/: the-real-index
test_dir/Default/DawnGraphiteCache/: index
test_dir/Default/DawnWebGPUCache/: index
test_dir/Default/Extension Rules/: LOG
test_dir/Default/Extension Scripts/: LOG
test_dir/Default/Extension State/: LOG
test_dir/Default/GPUCache/: index
test_dir/Default/Local Storage/leveldb/: LOG  LOG.old
test_dir/Default/Session Storage/: LOG  LOG.old
test_dir/Default/Sessions/: Session_13417174806303912  Tabs_13417174806334993
test_dir/Default/Shared Dictionary/cache/index-dir/: the-real-index
test_dir/Default/Site Characteristics Database/: LOG
test_dir/Default/Sync Data/LevelDB/: LOG
test_dir/Default/shared_proto_db/: LOG  LOG.old
test_dir/Default/shared_proto_db/metadata/: LOG  LOG.old
test_dir/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  index
test_dir/GraphiteDawnCache/: index
test_dir/ShaderCache/: index
test_dir/segmentation_platform/: ukm_db-wal
tests/integration/: test_browser_launch.py  test_config_tabs.py  test_onboarding_flow.py  test_tui_smoke.py
tests/unit/: test_activity_log.py  test_ai_config.py  test_bot_worker.py  test_browser_config.py  test_comment_generator.py  test_comment_review.py  test_config.py  test_header_bar.py  test_human_typer.py  test_like_comment_logic.py  test_live_feed.py  test_orchestrator_callbacks.py  test_orchestrator_integration.py  test_rate_limiter.py  test_scheduler.py  test_scraper_robustness.py  test_stats_panel.py  test_target_config.py  test_tui_app.py  test_tui_events.py  test_updates.py
